# gbcg3

./: README.md  pyproject.toml  setup.py
example/DENDRIMER/: notebook.ipynb
example/DENDRIMER/output/: sys.cg.data
example/HYPROMELLOSE/: notebook.ipynb
example/HYPROMELLOSE/output/: sys.cg.data
example/PDC/output/: evec.dat.0  sys.cg.data
example/PDC/output/map_files/: iter.3.map
example/PDC/output/xyz_files/: CG.mol_0.xyz
example/PMMA/: log.lammps  notebook.ipynb  polymer.data  polymer.lammpstrj  run.in
example/PMMA/output/: atoms.xyz  sys.cg.data  typing.summary.txt
example/PMMA/output/lammpstrj_files/: CG.mol_0.lampstrj
example/PMMA/output/map_files/: CG.map  iter.1_2.map  iter.1_3.map  iter.1_5.map  iter.2_2.map  (+5 more)
example/RHODO/: notebook.ipynb
example/RHODO/output/: evec.dat.0  evec.dat.1  evec.dat.2  sys.cg.data
example/TOL/: notebook.ipynb
example/TOL/output/: evec.dat.0  evec.dat.1  evec.dat.2  sys.cg.data
gbcg3/: __init__.py  cgmapping.py
gbcg3/cgmap/: cgmap.py
gbcg3/gbcg/: aux.py  core.py  gbcg.py  helpers.py  io.py
gbcg3/mapping/: atommaps.py
gbcg3/structure/: aux.py  lammps.py  utils.py
gbcg3/structure/lammps/: data.py  trajectory.py
gbcg3/utils/: io.py  logger.py  parser.py
tests/: test_progressive.py  test_spectral.py  utils.py
tests/progressive/hypromellose/: notebook.ipynb
tests/spectral/pentadecane/: evec.dat.1  evec.dat.2  notebook.ipynb  typing.summary.txt
tests/spectral/rhodopsin/: evec.dat.3  typing.summary.txt
tests/spectral/toluene/: atoms.xyz  evec.dat.1  evec.dat.2  notebook.ipynb  sys.cg.data
(+13 files in other folders)
